<resources>
    <string name="app_name">Ace Workout</string>
    <string name="menu_button">menu_button</string>
    <string name="ace_workout">ACE Workout</string>
    <string name="_1">1</string>
    <string name="report_image_button">report image button</string>
    <string name="summary_button">summary button</string>
    <string name="training_button">training button</string>
    <string name="setting_button">setting button</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="total_days_trained">Total Days Trained</string>
    <string name="Total_days_trained_number">0</string>
    <string name="summary">Summary</string>
    <string name="setting">Setting</string>
    <string name="training">Training</string>
    <string name="report">Report</string>
    <string name="training_name">Training Name</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="poor">Poor</string>
    <string name="good">Good</string>
    <string name="medium">Medium</string>
    <string name="great">Great</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="delete_button">Delete Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="actions">Actions</string>
    <string name="number_symbol">#</string>
    <string name="no_data_available">No Data Available</string>
    <string name="add_set">Add Set</string>
    <string name="select_body_part_of_exercise">Select Body Part of Exercise</string>
    <string name="description_text">Description Text</string>
    <string name="body_part_title">Body Part Title</string>
    <string name="exercise">Exercise</string>
    <string name="title_activity_add_exercise">addExercise</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="is_weighted_exercise">Is Weighted Exercise</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="body_part">Body Part</string>
</resources>
