<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_set_constraint_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/addSetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_set"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/weightInputTxtLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputTxtLayout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/repsInputTxtLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSetText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightInputTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repsInputTxtLayout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/reps"
        app:layout_constraintBottom_toTopOf="@+id/save_cancel_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightInputTxtLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repsInputTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/save_cancel_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repsInputTxtLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="127dp"
            android:layout_height="64dp"

            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/save"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="127dp"
            android:layout_height="64dp"

            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@android:string/cancel"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>